# nano-cereal

./: CMakeLists.txt  LICENSE  README.md
example/: main.cpp
include/cereal/: binary.hpp
include/nano-cereal/: binary.hpp  stream.hpp
test/: main.cpp  test_input.cpp  test_output.cpp
